fix: update style to fix navbar cut-off and wrapping on smaller devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1218,8 +1218,12 @@ header p {
 	}
 
 
+#navbar.active nav {
+			display: initial;
+		}
+
+
 #navbar.active .menu {
-			visibility: visible;
 			display: initial;
 			width: 14.5rem;
 			height: 25.5rem;
@@ -1326,70 +1330,92 @@ header p {
 
 @media screen and (min-width: 981px) {
 
-		#hamburger-menu {
-			visibility: hidden;
-			width: 0;
+		#navbar {
+			justify-content: space-evenly;
 		}
+
+			#navbar #hamburger-menu {
+				display: none;
+			}
 	}
 
 
 @media screen and (max-width: 980px) {
 
-		.menu {
-			visibility: hidden;
-			width: 0;
+		#navbar {
+			justify-content: space-between;
 		}
 
+			#navbar nav {
+				display: none;
+			}
 	}
 
 
-/* Footer */
+/* Theme-Toggle Hamburger-Menu Container*/
 
 
-footer {
-	background-color: rgb(172, 171, 171, 0.1);
-	box-shadow: inset 0 1px 0 0 rgba(0, 0, 0, 0.375);
-	color: rgb(0, 0, 0);
-}
-
-
-footer p {
-		padding: 1rem 0;
-		margin: 0;
-		font-weight: 400;
-	}
-
-
-/* Back to Top Button */
-
-
-html,
-body {
-	scroll-behavior: smooth;
-}
-
-
-.button.top.small {
-	--offset: 10vh;
-	margin-top: calc(100vh + var(--offset));
-	position: fixed;
-	bottom: 1.25rem;
-	right: 5vw;
-	border-radius: 30%;
-	height: 5vh;
-	width: 5vh;
-	padding: 0;
+#theme-hamburger-container {
 	display: flex;
+	flex-flow: row nowrap;
 	align-items: center;
-	justify-content: center;
+	-webkit-column-gap: 0.75rem;
+	   -moz-column-gap: 0.75rem;
+	        column-gap: 0.75rem;
 }
 
 
-.button.top.small > svg {
-		width: 2.5vh;
-		height: 2.5vh;
-		color: rgb(75, 211, 229);
+/* Theme Toggle */
+
+
+.theme-toggle {
+	border-color: rgb(0, 0, 0);
+	box-shadow: none;
+	display: flex;
+	flex-flow: row nowrap;
+	border: none;
+	background: none;
+	width: 5rem;
+	height: 2.5rem;
+	padding: 0;
+}
+
+
+.theme-toggle:hover,
+	.theme-toggle:active {
+		box-shadow: none;
+		color: rgb(0, 0, 0);
 	}
+
+
+.theme-toggle div {
+		display: flex;
+		justify-content: space-evenly;
+		align-items: center;
+		width: 50%;
+		height: inherit;
+	}
+
+
+/* Light Theme Buttons */
+
+
+.theme-toggle div.light svg {
+			color: rgb(238, 179, 15);
+		}
+
+
+a.button.primary {
+			color: rgb(255, 255, 255);
+		}
+
+
+/* Dark Theme Button */
+
+
+.theme-toggle div.dark svg {
+			color: rgb(0, 0, 0);
+		}
 
 
 /* Themes */
@@ -1537,59 +1563,6 @@ html.dark div.dark svg {
 		}
 
 
-/* Theme Toggle */
-
-
-.theme-toggle {
-	border-color: rgb(0, 0, 0);
-	box-shadow: none;
-	display: flex;
-	flex-flow: row nowrap;
-	border: none;
-	background: none;
-	width: 5rem;
-	height: 2.5rem;
-	padding: 0;
-}
-
-
-.theme-toggle:hover,
-	.theme-toggle:active {
-		box-shadow: none;
-		color: rgb(0, 0, 0);
-	}
-
-
-.theme-toggle div {
-		display: flex;
-		justify-content: space-evenly;
-		align-items: center;
-		width: 50%;
-		height: inherit;
-	}
-
-
-/* Light Theme Buttons */
-
-
-.theme-toggle div.light svg {
-			color: rgb(238, 179, 15);
-		}
-
-
-a.button.primary {
-			color: rgb(255, 255, 255);
-		}
-
-
-/* Dark Theme Button */
-
-
-.theme-toggle div.dark svg {
-			color: rgb(0, 0, 0);
-		}
-
-
 /* Scrollbar */
 
 
@@ -1619,4 +1592,53 @@ a.button.primary {
 *::-webkit-scrollbar-thumb {
 		background-color: rgba(119, 118, 118, 0.65);
 		border-radius: 1.5vw;
+	}
+
+
+/* Back to Top Button */
+
+
+html,
+body {
+	scroll-behavior: smooth;
+}
+
+
+.button.top.small {
+	--offset: 10vh;
+	margin-top: calc(100vh + var(--offset));
+	position: fixed;
+	bottom: 1.25rem;
+	right: 5vw;
+	border-radius: 30%;
+	height: 5vh;
+	width: 5vh;
+	padding: 0;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+
+.button.top.small > svg {
+		width: 2.5vh;
+		height: 2.5vh;
+		color: rgb(75, 211, 229);
+	}
+
+
+/* Footer */
+
+
+footer {
+	background-color: rgb(172, 171, 171, 0.1);
+	box-shadow: inset 0 1px 0 0 rgba(0, 0, 0, 0.375);
+	color: rgb(0, 0, 0);
+}
+
+
+footer p {
+		padding: 1rem 0;
+		margin: 0;
+		font-weight: 400;
 	}
